Quorum3/Library/Tests/Expressions/Pass/OutputDouble.quorum
class Main 
    action Main
        output 7.5
    end
end