Quorum3/Library/Tests/Expressions/Fail/DuplicateVariable.quorum
use Libraries.System.File
class Main
    action Main
        File file
        File file
    end
end